--- a/css/header.css
+++ b/css/header.css
@@ -39,6 +39,76 @@ main{
     border-radius: 10px;
 }
 
+/* Final page */
+
+.thanks-container{
+    font-family: "Montserrat", sans-serif;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.thanks-container h1{
+    margin-top: 40px;
+    font-weight: 700;
+    font-size: 40px;
+    line-height: 49px;
+    color: #784CC7;
+}
+.success{
+    width: 128px;
+    margin-top: 60px;
+}
+
+.thanks-container p{
+    font-weight: 400;
+    font-size: 24px;
+    text-align: center;
+}
+
+.part{
+    padding: 40px;
+}
+
+.text-insta{
+    padding: 0 40px 40px 40px;
+}
+.link-instagram a{
+    margin-top: 40px;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    margin-bottom: 40px;
+}
+
+.instagram{
+    width: 40px;
+}
+
+.link-instagram p{
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 49px;
+    color: #784CC7;
+}
+
+@media (max-width: 1010px) {
+    /* Final page */
+    .thanks-container h1{
+        font-weight: 700;
+        font-size: 32px;
+        line-height: 39px;
+    }
+
+    .thanks-container p{
+        font-size: 20px;
+    }
+    .link-instagram p{
+        font-size: 20px;
+    }
+}
+
 @media (max-width: 768px) {
     .card-container{
         width: 85%;
@@ -66,5 +136,18 @@ main{
     .card-container{
         margin-top: 0;
     }
+     /* Final page */
+     .link-instagram a{
+        margin-top: 10px;
+     }
 }
 
+@media (max-width: 400px) {
+    /* Final page */
+    .link-instagram a{
+        margin: 0;
+    }
+    .link-instagram p{
+        font-size: 15px;
+    }
+}
