--- a/css/header.css
+++ b/css/header.css
@@ -34,7 +34,7 @@ main{
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 70px;
+    gap: 60px;
 }
 
 .card-container{
@@ -48,7 +48,7 @@ main{
 .info-container{
     display: flex;
     flex-direction: column;
-    padding: 40px 50px;
+    padding: 40px;
     justify-content: center;
     align-items: center;
     gap: 60px;
@@ -56,7 +56,6 @@ main{
 
 .info-title{
     font-size: 24px;
-    padding: 0px 53px;
     font-weight: bold;
     color: #754AC1;
     text-align: center;
@@ -77,7 +76,7 @@ main{
     font-size: 24px;
 }
 
-.btn-participar{
+.btn-participar, button{
     text-decoration: none;
     color: white;
     font-weight: bold;
@@ -88,6 +87,37 @@ main{
     text-align: center;
 }
 
+@media (max-width: 1200px){
+    .logo img{
+        width: 230px;
+    }
+
+    .logo-container{
+        gap: 45px;
+    }
+
+    .info-container{
+        gap: 35px;
+    }
+
+    .info-title{
+        font-size: 22px;
+    }
+
+    .info-p{
+        font-size: 22px;
+    }
+
+    .info-date{
+        font-size: 30px;
+    }
+
+    .info-participar{
+        font-size: 22px;
+        text-align: center;
+    }
+
+}
 @media (max-width: 768px) {
     .card-container{
         width: 85%;
@@ -114,6 +144,27 @@ main{
 
     .card-container{
         margin-top: 0;
+    }
+
+    .info-container{
+        gap: 30px;
+    }
+
+    .info-title{
+        font-size: 20px;
+    }
+
+    .info-p{
+        font-size: 20px;
+    }
+
+    .info-date{
+        font-size: 28px;
+    }
+
+    .info-participar{
+        font-size: 20px;
+        text-align: center;
     }
 }
 
