--- a/css/header.css
+++ b/css/header.css
@@ -57,6 +57,52 @@ main {
     justify-content: center;
 }
 
+.thanks-container h1 {
+    margin-top: 40px;
+    font-weight: 700;
+    font-size: 40px;
+    line-height: 49px;
+    color: #784CC7;
+}
+
+.success {
+    width: 128px;
+    margin-top: 60px;
+}
+
+.thanks-container p {
+    font-weight: 400;
+    font-size: 24px;
+    text-align: center;
+}
+
+.part {
+    padding: 40px;
+}
+
+.text-insta {
+    padding: 0 40px 40px 40px;
+}
+
+.link-instagram a {
+    margin-top: 40px;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    margin-bottom: 40px;
+}
+
+.instagram {
+    width: 40px;
+}
+
+.link-instagram p {
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 49px;
+    color: #784CC7;
+}
+
 .info-container{
     display: flex;
     flex-direction: column;
