--- a/css/header.css
+++ b/css/header.css
@@ -130,7 +130,9 @@ main {
     font-weight: bold;
     font-size: 24px;
 }
-
+button{
+    border: none;
+}
 .btn-participar, button {
     text-decoration: none;
     color: white;
@@ -206,6 +208,14 @@ main {
     font-weight: bold;
 }
 
+.photo-button-container{
+    width: 100%;
+    display: flex;
+    gap: 10px;
+    flex-direction: column;
+    align-items: center;
+}
+
 .botao > button {
     width: 200px;
     height: 60px;
@@ -227,7 +237,7 @@ dialog{
     position: absolute;
     top: 50%;
     left: 50%;
-    z-index: 1000;
+    transform: translateX(-50%) translateY(-50%);
     border: 1px solid gray;
     padding: 20px;
     border-radius: 20px;
@@ -244,6 +254,29 @@ input:focus {
 
 .btn-participar:hover, button:hover{
     background-color: #583C8B;
+}
+.dialog-header{
+    width: 100%;
+    display: flex;
+    justify-content: end;
+}
+.close-button{
+    display: flex;
+    padding: 10px;
+    justify-content: center;
+    align-items: center;
+    width: 20px;
+    height: 20px;
+    border-radius: 100%;
+    background: #ff4646;
+}
+.close-button > img{
+    width: 10px;
+    height: 10px;
+}
+
+.close-button:hover{
+    background: #c33131;
 }
 
 @media (max-width: 1200px) {
