--- a/css/header.css
+++ b/css/header.css
@@ -149,14 +149,15 @@ button{
     font-weight: bold;
     background-color: #754AC1;
     padding: 20px;
-    border-radius: 10px;
+    border-radius: 10px !important;
     width: 200px;
+    height: auto;
     text-align: center;
     transition: all .25s ease;
 }
 
 .form-container {
-    margin-top: 20px;
+    margin-top: 0;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -177,9 +178,11 @@ button{
 }
 
 .form-input-container > input {
-    padding: 12px;
-    border-radius: 7.5px;
-    border: 1px solid #D9D9D9;
+    padding: 12px !important;
+    height: 40px !important;
+    border-radius: 7.5px !important;
+    border: 1px solid #D9D9D9 !important;
+    
 }
 
 .form-input-container {
@@ -221,9 +224,9 @@ button{
 .photo-button-container{
     width: 100%;
     display: flex;
-    gap: 10px;
-    flex-direction: column;
+    /* gap: 20px !important; */
     align-items: center;
+    justify-content: center !important;
 }
 
 .botao > button {
@@ -232,7 +235,7 @@ button{
     font-weight: bold;
     color: white;
     background-color: #754AC1;
-    border-radius: 10px;
+    border-radius: 10px !important;
     border: none;
     cursor: pointer;
     font-size: 18px;
