--- a/css/header.css
+++ b/css/header.css
@@ -292,6 +292,17 @@ input:focus {
     background: #c33131;
 }
 
+#video{
+    width: 300px;
+    height: 300px;
+}
+
+#canvas{
+    width: 300px;
+    height: 225px;
+    margin: 38px 0;
+}
+
 @media (max-width: 1200px) {
     .logo img {
         width: 230px;
@@ -531,7 +542,7 @@ input:focus {
 
     }
 
-    @media (max-width: 400px) {
+    @media (max-width: 450px) {
 
         .container{
             height: 850px;
@@ -543,6 +554,11 @@ input:focus {
 
         .link-instagram p {
             font-size: 15px;
+        }
+        #canvas{
+            height: 300px;
+            width: 225px;
+            margin: 0;
         }
     }
 }
