--- a/css/header.css
+++ b/css/header.css
@@ -293,8 +293,8 @@ input:focus {
 }
 
 #video{
-    width: 300px;
-    height: 300px;
+    width: 300px !important;
+    height: 300px !important;
 }
 
 #canvas{
