--- a/css/header.css
+++ b/css/header.css
@@ -294,6 +294,26 @@ input:focus {
     margin: 38px 0;
 }
 
+.loader {
+    width: 30px;
+    height: 30px;
+    border: 2px solid #FFF;
+    border-bottom-color: #362A4B;
+    border-radius: 50%;
+    display: inline-block;
+    box-sizing: border-box;
+    animation: rotation 1s linear infinite;
+    }
+
+    @keyframes rotation {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+    } 
+
 @media (max-width: 1200px) {
     .logo img {
         width: 230px;
@@ -327,8 +347,6 @@ input:focus {
     .titulo-form {
         font-size: 32px;
     }
-
-
 }
 @media (max-width: 975px) {
     .container{
