--- a/css/header.css
+++ b/css/header.css
@@ -166,7 +166,18 @@ button{
     padding: 20px;
     gap: 20px;
 }
-
+.softjr{
+    color: white;
+    text-align: center;
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+a{
+    text-decoration: none;
+}
+.link-softjr{
+    color: white;
+}
 .titulo-form {
     font-size: 40px;
 }
