--- a/css/header.css
+++ b/css/header.css
@@ -35,7 +35,7 @@ main {
 }
 
 .logo-container {
-    padding: 20px;
+    padding: 10px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -144,9 +144,18 @@ main {
     color: #754AC1;
 }
 .info-participar {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
     font-weight: bold;
     font-size: 22px;
 }
+.info-participar > p:last-child{
+    font-size: 12px; 
+    color: red; 
+    text-align: center;
+}
+
 button{
     border: none;
 }
